k8s-deployments/02-ci-pipeline/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-pipeline
spec:
  replicas: 2
