k8s-deployments/02-ci-pipeline/overlays/prod/volumeMount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-pipeline
spec:
  template:
    spec:
      volumes:
        - name: configmap
          configMap:
            name: ci-pipeline-prod
